manifests/hetzner/listmonk/httproute-http.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: listmonk-http
spec:
  parentRefs:
  - name: listmonk
    sectionName: web
  hostnames:
  - listmonk.techwerkers.nl
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        hostname: listmonk.techwerkers.nl
        statusCode: 301
