manifests/hetzner/listmonk/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: listmonk
spec:
  parentRefs:
  - name: listmonk
    sectionName: websecure
  hostnames:
  - listmonk.techwerkers.nl
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
      - name: listmonk-listmonk
        port: 9000
        weight: 1
